:memo: Nova documentacao do swagger rota de consulta usuarios
