# api-temperatura/docs/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/": {
+        "/home": {
             "get": {
                 "description": "Retorna uma mensagem de boas-vindas da API Temperatura",
                 "produces": [
@@ -21,6 +21,48 @@
                             "type": "string"
                         }
                     }
+                }
+            }
+        },
+        "/user": {
+            "get": {
+                "description": "Retorna a lista de usuarios cadastrados no banco de dados",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "Obtem a lista de usuarios",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.User"
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "models.User": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
                 }
             }
         }
